--- a/index.html
+++ b/index.html
@@ -3,9 +3,16 @@
     <head>
         <meta charset="UTF-8">
         <title>rock-paper-scissors</title>
-        <script src="index.js"></script>
+        <script src="index.js" defer></script>
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        
+        <div class = "container">
+            <button class = "btn" id = "1">rock</button>
+            <button class = "btn" id = "2">paper</button>
+            <button class = "btn" id = "3">scissors</button>
+        </div>
+        <p></p>
+        <p></p>
     </body>
 </html>
