--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
             <button class = "btn" id = "3">scissors</button>
         </div>
         <p></p>
-        <p></p>
+        <div class = "container">
+            <button class = "btnTwo" id = "1">rock</button>
+            <button class = "btnTwo" id = "2">paper</button>
+            <button class = "btnTwo" id = "3">scissors</button>
+        </div>
     </body>
 </html>
